# parsero

./: .gitignore  README.md  bad.regex  makefile  pyproject.toml  regex.md  tokens.txt
.github/workflows/: python-app.yml
examples/: example_2.regex  ff_table_example.cfg  ff_table_example.word  first_follow_example_1.cfg  first_follow_example_2.cfg  left_recursion_two.cfg  lower_case.fa  python.grammar  python.regex  simple_cfg.cfg  starts_a_ends_b.fa
examples/c/: c.ghm  c.grammar  c.regex  example.c  valid_0.c
examples/hello_worlds/: cpp.cpp  python.py
examples/json/: example.json  json.ghm  json.regex
examples/lisp/: example.lisp  lisp.ghm  lisp.regex  str8ts.lisp
examples/python/: example.py  python.ghm  python.regex
parsero/: __init__.py  __main__.py  contextfree_grammar.py  errors.py  file_io.py  finite_automata.py  lexical.py  nd_finite_automata.py  parser.py  regex.py  state.py  symbol_table.py  syntactic.py  token.py  token_list.py  utils.py  wrapper.py
parsero/automata/: __init__.py  commons.py  finite_automata.py  nd_finite_automata.py  state.py  wrapper.py
parsero/cfg/: contextfree_grammar.py
parsero/common/: __init__.py  constants.py  errors.py
parsero/context_free_grammar/: __init__.py  contextfree_grammar.py
parsero/example_machines/: fa_machines.py
parsero/lexical/: __init__.py  lexical_analyzer.py  symbol_table.py  (+1 more)
tests/: test_automata_union.py  test_cfg.py  test_finite_automata.py  test_lexycal.py  test_nd_finite_automata.py  test_parser.py  test_parsero.py  test_regex.py  test_regex_tree.py  test_syntactic.py  test_wrapper.py
(+29 files in other folders)
