[tool.poetry]
name = "parsero"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100

[tool.isort]
multi_line_output = 3
include_trailing_comma = true